Misspelling of "than"
In ../src/Microsoft365/calendar/e-cal-backend-m365-utils.c:1916, the string "Microsoft 365 calendar cannot store more that one event reminder" has a misspelled "than".
In ../src/Microsoft365/calendar/e-cal-backend-m365-utils.c:1916, the string "Microsoft 365 calendar cannot store more that one event reminder" has a misspelled "than".