I#263 - Misspelling of "than" in translatable string

Closes https://gitlab.gnome.org/GNOME/evolution-ews/-/issues/263